<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/txtStep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <TextView
            android:id="@+id/txtStep1Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1_desc"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txtStep1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputListenerKey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/step1_hint"
            app:layout_constraintTop_toBottomOf="@+id/txtStep1Desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextAppearance="@style/HintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtStep2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/step2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textInputListenerKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <TextView
            android:id="@+id/txtStep2Desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step2_desc"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txtStep2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
